[package]
name = "ice-test"
version = "0.1.0"
authors = ["Erin Power <erin.power@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
prost-types = "0.7.0"
tonic = "0.4.3"

[build-dependencies]
tonic-build = { version = "0.4.0", default_features = false, features = ["transport", "prost"] }
prost-build = "0.7.0"
